argocd-test/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-test
  labels:
    app: argocd-test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cr
spec:
  rules:
    - host: argocd-test.rcomanne.nl
      http:
        paths:
          - path: /
            pathType: Prefx
            backend:
              service:
                name: argocd-test
                port:
                  name: http
